Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24945

Clang Code Model not working with Cmake precompiled headers

XMLWordPrintable

    • Linux/X11
    • 98b92ed03ec49e1c0f614266fadf04b2bca408cd (qt-creator/qt-creator/master)

      Qt Creators Clang Code Model, autocompletion and outline are working as long as precompiled headers have not been build. After build those functions are not working for all files that are newly opened in the text editor.

      See the minimal sample project attached to reproduce:

      1) Open project in Qt Creator

      2) Do not open any files in the code text editor

      3) Build the project

      4) Open main.cpp in the code text editor

      5) Autocomplete, Outline and Clang Code Model are not working

      6) Close main.cpp code editor

      7) Clean the project

      6) Open main.cpp -> Autocomplete and Clang Code Model are working again

      My Cmake version is 3.18.5

        1. CodeModelInspector.png
          CodeModelInspector.png
          107 kB
        2. ctrl-shift-f12.png
          ctrl-shift-f12.png
          76 kB
        3. PCHTest.zip
          0.8 kB
        4. problem.png
          problem.png
          132 kB
        5. qtc_clang.log
          7 kB
        For Gerrit Dashboard: QTCREATORBUG-24945
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            avl Anton Lebedev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes