src/plugins/cpptools/compileroptionsbuilder.h
@@ -88,8 +88,6 @@ public:
     void add(const QStringList &args, bool gccOnlyOptions = false);
     virtual void addExtraOptions() {}
 
-    void remove(const QStringList &args);
-
     static UseToolchainMacros useToolChainMacros();
     void reset();
 
@@ -103,6 +101,7 @@ private:
     QStringList wrappedQtHeadersIncludePath() const;
     QStringList wrappedMingwHeadersIncludePath() const;
     QByteArray msvcVersion() const;
+    void addIncludeFile(const QString &file);
 
 private:
     const ProjectPart &m_projectPart;
